cmake_minimum_required(VERSION 3.10)
project(lab03 VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(print STATIC sources/print.cpp)
target_include_directories(print PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(example1 examples/example1.cpp)
target_link_libraries(example1 print)
